discussion/kv_engine/139408/139408_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Try to get compaction and flusher in parallel

Change-Id: I28e9d69764feba6d78be4208d9a06408d9e26f92

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-11-03 06:33:13.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-11-03 06:51:00.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5399/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1748:13: error: too many arguments to function call, expected at most 5, have 6 [clang-diagnostic-error]
            [&on_disk_prepares, purge_seqno](Db& compacted) {
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1340:1: note: "replay" declared here
LIBCOUCHSTORE_API
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/couchstore/include/libcouchstore/visibility.h:15:33: note: expanded from macro "LIBCOUCHSTORE_API"
#      define LIBCOUCHSTORE_API __attribute__((visibility("default")))
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5399/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1748:13:
error: too many arguments to function call, expected at most 5, have 6 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/5399/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27195/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1748:13:
error: too many arguments to function call, expected at most 5, have 6
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/27195/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31492/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(50): fatal error C1083: Cannot open include file: "sys/sendfile.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/31492/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5821/ : FAILURE

Compile error at [2020-11-03T06:37:08.382Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:50:10:
fatal error: "sys/sendfile.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5821/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6754/ : FAILURE

Compile error at [2020-11-03T06:41:19.547Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1777:14:
error: could not convert ?<lambda closure object>CouchKVStore::tryToCatchUpDbFile(Db&, Db&, std::unique_lock<std::mutex>&, bool, uint64_t, uint64_t&, Vbid)::<lambda(Db&, Db&, const DocInfo*, const DocInfo*)>{(* & on_disk_prepares)}? from ?CouchKVStore::tryToCatchUpDbFile(Db&, Db&, std::unique_lock<std::mutex>&, bool, uint64_t, uint64_t&, Vbid)::<lambda(Db&, Db&, const DocInfo*, const DocInfo*)>? to ?PrecommitHook {aka std::function<couchstore_error_t(Db&)>}?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6754/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6878/ : FAILURE

Compile error at [2020-11-03T06:38:12.017Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1777:14:
error: could not convert ?<lambda closure object>CouchKVStore::tryToCatchUpDbFile(Db&, Db&, std::unique_lock<std::mutex>&, bool, uint64_t, uint64_t&, Vbid)::<lambda(Db&, Db&, const DocInfo*, const DocInfo*)>{(* & on_disk_prepares)}? from ?CouchKVStore::tryToCatchUpDbFile(Db&, Db&, std::unique_lock<std::mutex>&, bool, uint64_t, uint64_t&, Vbid)::<lambda(Db&, Db&, const DocInfo*, const DocInfo*)>? to ?PrecommitHook {aka std::function<couchstore_error_t(Db&)>}?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6878/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14679/ : FAILURE

Compile error at [2020-11-03T06:34:42.739Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1748:13:
error: too many arguments to function call, expected at most 5, have 6
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/14679/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7048/ : FAILURE

Compile error at [2020-11-03T06:34:02.504Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1748:13:
error: too many arguments to function call, expected at most 5, have 6
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/7048/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3928/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
